# SKN30-1st-3Team

./: README.md  appCSV.py  appDB.py  pyproject.toml  seoul_EV.ipynb
data/processed/: FAQ_final3.json  seoul_car_sum.csv  seoul_charge_final.csv
data/raw_data/charge_fee/: charge_fee.csv
data/raw_data/faq/: FAQ_0_일반_sorted.csv  FAQ_1_kia_ev_final.csv  FAQ_3_tesla_sorted.csv  FAQ_4_ev_faq_final.csv  FAQ_5_mugonghae.csv
data/webcrawling/: proproject_evb.ipynb  proproject_kia.ipynb  proproject_mugonghae.ipynb  proproject_pse.py  proproject_tesla.py
데이터/: gu_master.csv  seoul_car_status.csv
