[project]
name = "project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "asyncio>=4.0.0",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "nest-asyncio>=1.6.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pymysql>=1.1.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
    "streamlit-folium>=0.27.1",
    "tqdm>=4.67.3",
]
